assignment 1 box model

--- a/block-BHaaap/index.html
+++ b/block-BHaaap/index.html
@@ -1,4 +1,24 @@
-<!---
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body>
+    <h1> heading element</h1>
+    <p class="box"> 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, commodi, tenetur aliquam laboriosam facilis reprehenderit esse aut rerum odio perferendis nesciunt architecto velit cupiditate culpa, distinctio eum soluta itaque sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quisquam adipisci maxime dignissimos veritatis cum itaque ab officiis cupiditate a molestiae est culpa at, aut inventore accusamus excepturi laudantium eligendi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos officiis molestiae illum dolores magnam dolorem deserunt impedit illo maiores. Qui blanditiis culpa minus temporibus tenetur sequi placeat eum perspiciatis dicta. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, tenetur hic distinctio quam excepturi dicta harum magnam saepe aliquam iusto natus deleniti dolor, voluptatum odio nemo blanditiis consequatur praesentium facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas in soluta architecto dolores maxime harum asperiores deserunt autem molestiae! Quia veniam dolor tenetur. Accusamus fugiat dicta odit animi suscipit dignissimos. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis, praesentium omnis dolor facilis odit sapiente cupiditate, sit ipsam, at porro saepe similique labore aut debitis molestiae adipisci et voluptas pariatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quo, magni id qui neque repellat inventore officia debitis minima! Accusantium dicta eaque consequuntur nobis optio quod dolore natus consectetur quam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae pariatur facilis inventore, voluptatibus officia quae omnis consequuntur itaque expedita distinctio voluptates quaerat architecto optio fugit laborum eligendi aut mollitia aperiam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam magnam illum earum autem maxime omnis a animi, officiis ratione veniam provident reiciendis expedita molestiae repudiandae, corporis quibusdam architecto tempore deleniti? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, nulla. Minima obcaecati nobis voluptates? Voluptates, tempora tempore! Quasi inventore quibusdam omnis commodi, possimus quidem corporis nisi, dolores deleniti tempora nam. </p>
+    <img src="nature.png" alt="nature" >
+    <div class="circle"> </div>
+    <footer class="bottom"> 
+        <a href="#">Twitter</a>
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+    </footer>
+</body>
+</html>
 
 ### Create a web page with the following characteristics:
 
